--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Admin::Stores#index</h1>
-<p>Find me in app/views/admin/stores/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h3>店舗一覧</h3>
+  </div>
+  <div class="row">
+
+
+    <% @stores.each do |store| %>
+      <div class="col-md-4">
+        <%= link_to admin_store_path(store.id) do %>
+          <%= image_tag store.get_image(200,150) %>
+        <% end %>
+        <p>店舗名</p>
+          <%= store.name %>
+        <p>販売エリア</p>
+          <%= store.sale_area_id %>
+        <p>販売商品数</p>
+          <%= store.items.count %>
+      </div>
+    <% end %>
+  </div>
+</div>
