--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
               <%= link_to "店舗ページ", admin_store_path(current_admin_store), class: 'nav-link' %>
             </li>
             <li class="nav-item">
-              <%= link_to "商品登録", new_admin_store_item_path, class: 'nav-link' %>
+              <%= link_to "商品登録", new_admin_store_item_path(current_admin_store.id), class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
