--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,32 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<div class="container">
+  <div class="row mt-5">
+    <h2>商品新規登録</h2>
+  </div>
+  <div class="row mt-5">
+    <%= form_with model: [@store, @item], url: admin_store_items_path do |f| %>
+    <table class="table table-borderless">
+      <tr>
+        <th>商品画像</td>
+        <td><%= f.file_field :image, accept: "image/*" %></td>
+      </tr>
+      <tr>
+        <th>商品名</th>
+        <td><%= f.text_field :name %></td>
+      </tr>
+      <tr>
+        <th>商品説明</th>
+        <td><%= f.text_area :explanation %></td>
+      </tr>
+      <tr>
+        <th>カテゴリー</th>
+        <td><%= f.collection_select :category_id, Category.all, :id, :name, {include_blank: "--選択してください--"}%></td>
+      </tr>
+      <tr>
+        <th>値段</th>
+        <td><%= f.text_field :without_tax %></td>
+      </tr>
+    </table>
+    <%= f.submit "登録する", class: "btn btn-success" %>
+    <% end %>
+  </div>
+</div>
