--- a/app/views/public/stores/index.html.erb
+++ b/app/views/public/stores/index.html.erb
@@ -1,2 +1,19 @@
-<h1>Public::Stores#index</h1>
-<p>Find me in app/views/public/stores/index.html.erb</p>
+<div class="container">
+  <div class="row mt-5">
+    <h3>店舗一覧</h3>
+  </div>
+  <div class="row">
+    <div class="d-flex flex-wrap mx-auto">
+      <% @stores.each do |store| %>
+        <%= link_to store_path(store.id), class: "text-dark" do %>
+          <div class= "m-1 p-1">
+            <div><%= image_tag store.get_image(250,250) %></div><br>
+            <div><%= store.name %></div><br>
+            <div><%= store.sale_area_id %></div><br>
+            <div>販売商品数: <%= store.items.count %></div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
