[Create]顧客店舗詳細画面

--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -20,7 +20,7 @@
     </div>
   </div>
   <div class="row mt-5">
-    <h4>販売商品</h4>
+    <h4>販売商品一覧</h4>
   </div>
   <div class="row">
     <table class="table">
