--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Public::Items#show</h1>
-<p>Find me in app/views/public/items/show.html.erb</p>
+<div class="container">
+  <div class="row mt-5 ml-5">
+    <h3><%= @item.name %></h3>
+  </div>
+  <div class="row">
+    <div class="col-6">
+      <div><%= image_tag @item.get_image(250,250) %></div>
+    </div>
+    <div class="col-6">
+      <div><%= @item.explanation %></div><br>
+      <div><%= @item.without_tax %></div>
+    </div>
+  </div>
+</div>
