--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row mt-5 ml-5">
     <h3><%= @item.name %></h3>
   </div>
-  <div class="row">
+  <div class="row mb-5">
     <div class="col-6">
       <div><%= image_tag @item.get_image(250,250) %></div>
     </div>
@@ -10,5 +10,12 @@
       <div><%= @item.explanation %></div><br>
       <div><%= @item.without_tax %></div>
     </div>
+  </div>
+  <div class="row">
+    <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
+      <%= f.hidden_field :item_id, value: @item.id %>
+      <%= f.select :amount, *[1..5] %>
+      <%= f.submit "カートにいれる", class: "btn btn-primary" %>
+    <% end %>
   </div>
 </div>
