--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,38 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<div class="container">
+  <div class="row mt-5 ml-5 mb-5">
+    <h3>カート</h3>
+  </div>
+  <div class="row">
+  <% @cart_items.each do |cart_item| %>
+    <div class="col-3">
+      <%= image_tag cart_item.item.get_image(150, 150) %>
+    </div>
+    <div class="col-3 text-center">
+      <%= cart_item.item.name %><br>
+      <%= cart_item.item.with_tax_price %> 円
+    </div>
+    <div class="col-6">
+      <%= form_with model: @cart_item, url: cart_item_path(cart_item.id), method: :patch do |f| %>
+        数量 <%= f.select :amount, *[1..5],{selected: cart_item.amount} %>
+        <span class="ml-2"><%= f.submit "変更", class: "btn btn-primary" %></span>
+      <% end %>
+    </div>
+  </div>
+  <div class="row mt-3">
+    <div class="col-3 offset-3">
+      <span>小計 <%= cart_item.subtotal %> 円</span>
+    </div>
+    <div class="col-5 text-center">
+      <%= link_to "削除", cart_item_path(cart_item.item_id), method: :delete, class: "btn btn-danger" %>
+    </div>
+  </div>
+  <% @total_price += cart_item.subtotal %>
+  <% end %>
+  <div class="row mt-5">
+    <strong class="mx-auto">合計金額 <span class="ml-3"><%= @total_price %> 円</span></strong>
+
+  </div>
+  <div class="row mt-5 mx-auto">
+    <%= link_to "購入手続き", orders_confirm_path, class: "btn btn-primary mx-auto", style: "width: 40%;" %>
+  </div>
+</div>
