--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -2,8 +2,8 @@
   <div class="row mt-5 ml-5 mb-5">
     <h3>カート</h3>
   </div>
-  <div class="row">
   <% @cart_items.each do |cart_item| %>
+  <div class="row mt-3">
     <div class="col-3">
       <%= image_tag cart_item.item.get_image(150, 150) %>
     </div>
