--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -33,6 +33,6 @@
 
   </div>
   <div class="row mt-5 mx-auto">
-    <%= link_to "購入手続き", orders_confirm_path, class: "btn btn-primary mx-auto", style: "width: 40%;" %>
+    <%= link_to "購入手続き", new_order_path, class: "btn btn-primary mx-auto", style: "width: 40%;" %>
   </div>
 </div>
