[Create]管理者注文履歴一覧

--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,2 +1,5 @@
-<h1>Public::Orders#complete</h1>
-<p>Find me in app/views/public/orders/complete.html.erb</p>
+<div class="container">
+  <div class="row text-center">
+    <h5>注文番号</h5>
+  </div>
+</div>
