--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Admin::Orders#index</h1>
-<p>Find me in app/views/admin/orders/index.html.erb</p>
+<div class="container">
+  <div class="row mt-5">
+    <h2>注文履歴一覧</h2>
+  </div>
+  <div class="row">
+    <table class="table">
+      <thead>
+        <th>購入日時</th>
+        <th>注文番号</th>
+        <th>注文ステータス</th>
+        <th></th>
+      </thead>
+      <% @orders.each do |order| %>
+      <tbody>
+        <td><%= order.created_at.strftime('%Y/%m/%d/%H:%M') %></td>
+        <td><%= order.order_number %></td>
+        <td><%= order.order_status %></td>
+        <td><%= link_to "Show", admin_order_path(order.id), class: "btn btn-info" %></td>
+      </tbody>
+      <% end %>
+    </table>
+  </div>
+</div>
