--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -26,10 +26,10 @@
       <%= link_to "削除", cart_item_path(cart_item.item_id), method: :delete, class: "btn btn-danger" %>
     </div>
   </div>
-  <% @total_price += cart_item.subtotal %>
+  <% @product_total += cart_item.subtotal %>
   <% end %>
   <div class="row mt-5">
-    <strong class="mx-auto">合計金額 <span class="ml-3"><%= @total_price %> 円</span></strong>
+    <strong class="mx-auto">合計金額 <span class="ml-3"><%= @product_total %> 円</span></strong>
 
   </div>
   <div class="row mt-5 mx-auto">
