--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -15,7 +15,7 @@
     <p class="mx-auto">ご自身の座席番号を入力してください</p>
   </div>
   <div>
-    <%= form_with model: @order, url: orders_confirm_path do |f| %>
+    <%= form_with model: @order, url: orders_confirm_path, mathod: :post do |f| %>
     <table class="table　table-bprderless mx-auto">
       <tr>
         <th>座席エリア</th>
