[Create]顧客注文完了画面

--- a/app/views/public/orders/complete.html.erb
+++ b/app/views/public/orders/complete.html.erb
@@ -1,5 +1,12 @@
 <div class="container">
-  <div class="row text-center">
-    <h5>注文番号</h5>
+  <div class="row mt-5">
+    <h5 style="margin: 0 auto; padding-bottom: 100px;">注文番号</h5>
+  </div>
+  <div class="row mb-5">
+    <h5 style="margin: 0 auto;">ご注文ありがとうございました！</h5>
+  </div>
+  <div class="row mt-5">
+    <h5 style="margin: 0 auto;">只今より商品準備に取り掛かります。</h5>
+    <h5 style="margin: 0 auto;">商品到着までご自身の席にてお待ちください。</h5>
   </div>
 </div>
