--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -30,19 +30,42 @@
       </tr>
     </table>
   </div>
-  <div class="row mt-4">
+  <div class="row mt-2">
     <div class="col-md-9">
       <table class="table">
         <thead>
+          <th></th>
           <th>商品名</th>
           <th>単価(税込)</th>
           <th>数量</th>
           <th>小計</th>
         </thead>
-
+        <% @order_details.each do |order_detail| %>
         <tbody>
-
+          <td><%= image_tag order_detail.item.get_image(50,50) %></td>
+          <td><%= order_detail.item.name %></td>
+          <td><%= order_detail.purchase_price.to_s(:delimited) %></td>
+          <td><%= order_detail.amount %></td>
+          <td><%= order_detail.subtotal.to_s(:delimited) %></td>
         </tbody>
+        <% @product_total += order_detail.subtotal %>
+        <% end %>
+      </table>
+    </div>
+    <div class="col-md-3 mt-5">
+      <table class="table table-borderless">
+        <tr>
+          <th>商品合計</th>
+          <td><%= @product_total.to_s(:delimited) %>円</td>
+        </tr>
+        <tr>
+          <th>送料</th>
+          <td>200円</td>
+        </tr>
+        <tr>
+          <th>請求金額合計</th>
+          <td><strong><%= @order.total_price.to_s(:delimited) %>円</strong></td>
+        </tr>
       </table>
     </div>
   </div>
