--- a/app/views/public/new_gourmets/index.html.erb
+++ b/app/views/public/new_gourmets/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Public::NewGourmets#index</h1>
-<p>Find me in app/views/public/new_gourmets/index.html.erb</p>
+<div class="container">
+  <div class="row mt-5 mb-5">
+    <h3 class="mx-auto">新着グルメ</h3>
+  </div>
+  <div class="row">
+    <% @items.each do |item| %>
+    <div class="col-6">
+      <%= link_to store_item_path(item.store_id, item.id) do %>
+        <%= image_tag item.get_image(200,150) %>
+        <p><%= item.name %></p>
+        <p><%= item.store.name %></p>
+        <p><%= item.store.sale_area.name %></p>
+        <p><%= item.with_tax_price.to_s(:delimited) %>円</p>
+      <% end %>
+    </div>
+    <% end %>
+  </div>
+</div>
