--- a/app/views/public/searches/index.html.erb
+++ b/app/views/public/searches/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Public::Searches#index</h1>
-<p>Find me in app/views/public/searches/index.html.erb</p>
+<div class="container">
+  <div class="row mt-5" style="height: 100px;">
+    <%= link_to "店舗から探す", stores_path, class: "btn btn-primary mx-auto w-50 h-100" %>
+  </div>
+  <div class="row mt-5" style="height: 100px;">
+    <%= link_to "カテゴリーから探す", categories_path, class: "btn btn-warning mx-auto w-50 h-100" %>
+  </div>
+  <div class="row mt-5" style="height: 100px;">
+    <%= link_to "エリアから探す", sale_areas_path, class: "btn btn-danger mx-auto w-50 h-100" %>
+  </div>
+</div>
