--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Public::Categories#index</h1>
-<p>Find me in app/views/public/categories/index.html.erb</p>
+<div class="container">
+  <div class="row">
+    <% @categories.each do |category| %>
+    <div class="col-6 mt-5" style="height: 100px; text-align: center;">
+      <%= link_to category.name, category_path(category.id), class: "btn btn-primary w-75 h-100" %>
+    </div>
+    <% end %>
+  </div>
+</div>
