--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,1 +1,7 @@
 @import '~bootstrap/scss/bootstrap';
+
+.home {
+  background-image: url("/assets/ykyujo.jpg");
+  height: 800px;
+  background-size: cover;
+}
