--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,7 @@
       </div>
     </nav>
   <% else %>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #4db56a">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #a6ce39">
       <a class="navbar-brand" href="/">スタジアムグルメ</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
