--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -2,22 +2,22 @@
   <div class="row">
     <h3>店舗一覧</h3>
   </div>
-  <div class="row">
-    <table class="table">
+  <div class="row mt-3">
+    <table class="table table-hover">
       <thead>
-        <th>店舗画像</th>
-        <th>店舗名</th>
-        <th>販売エリア</th>
-        <th>販売商品数</th>
-        <th></th>
+        <th width="15%">店舗画像</th>
+        <th width="35%">店舗名</th>
+        <th width="20%">販売エリア</th>
+        <th width="10%">販売商品数</th>
+        <th width="20%"></th>
       </thead>
       <% @stores.each do |store| %>
         <tbody>
           <td><%= image_tag store.get_image(50,50) %></td>
           <td><%= store.name %></tb>
           <td><%= store.sale_area.name %></td>
-          <td><%= store.items.count %></td>
-          <td><%= link_to "Show", admin_store_path(store.id), class: "btn btn-info" %></td>
+          <td class="text-center"><%= store.items.count %></td>
+          <td class="text-center"><%= link_to "Show", admin_store_path(store.id), class: "btn btn-info" %></td>
         </tbody>
       <% end %>
     </table>
