[Update]顧客店舗一覧画面 レイアウト

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -15,5 +15,6 @@ header {
 
 body {
   margin-top: 100px;
+  margin-bottom: 100px;
   font-family: "You Gothic Medium", "游ゴシック Medium", "YuGothic", "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-seril;
 }
