--- a/app/views/public/stores/index.html.erb
+++ b/app/views/public/stores/index.html.erb
@@ -3,17 +3,25 @@
     <h3>店舗一覧</h3>
   </div>
   <div class="row">
-    <div class="d-flex flex-wrap mx-auto">
-      <% @stores.each do |store| %>
+    <% @stores.each do |store| %>
+    <div class="col-6 mt-3">
+      <div class="card card-hover">
         <%= link_to store_path(store.id), class: "text-dark" do %>
-          <div class= "m-1 p-1">
-            <div><%= image_tag store.get_image(250,250) %></div><br>
-            <div><%= store.name %></div><br>
-            <div><%= store.sale_area_id %></div><br>
-            <div>販売商品数: <%= store.items.count %></div>
-          </div>
+          <div class="card-img-top"><%= image_tag store.get_image(200,200), style: "width: 100%" %></div><br>
+          <h5 class="card-title"><%= store.name %></h5>
+          <table class="table table-borderless">
+            <tr>
+              <th>販売エリア</th>
+              <td><%= store.sale_area.name %></td>
+            </tr>
+            <tr>
+              <th>販売商品数</th>
+              <td><%= store.items.count %></td>
+            </tr>
+          </table>
         <% end %>
-      <% end %>
+      </div>
     </div>
+    <% end %>
   </div>
 </div>
