--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,6 @@
   <% if admin_store_signed_in? %>
     <div style="height: 50px; background-color: #c22a1f"></div>
   <% else %>
-    <div style="height: 50px; background-color: #4db56a"></div>
+    <div style="height: 50px; background-color: #a6ce39"></div>
   <% end %>
 </footer>
