--- a/app/views/public/stores/show.html.erb
+++ b/app/views/public/stores/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row mt-5">
-    <h3 class="mr-5"><%= @store.name %></h2>
+    <h3><%= @store.name %></h3>
   </div>
   <div class="row">
     <div class="col-6">
@@ -10,7 +10,7 @@
       <table class="table table-borderless mt-5">
         <tr>
           <th>販売エリア</th>
-          <td><%= @store.sale_area_id %></td>
+          <td><%= @store.sale_area.name %></td>
         </tr>
         <tr>
           <th>販売商品数</th>
@@ -23,17 +23,21 @@
     <h4>販売商品一覧</h4>
   </div>
   <div class="row">
-    <div class="d-flex flex-wrap mx-auto">
-      <% @items.each do |item| %>
-        <%= link_to store_item_path(@store.id, item.id), class: "text-dark" do %>
-          <div class= "m-1 p-1">
-            <div><%= image_tag item.get_image(250,250) %></div><br>
-            <div><%= item.name %></div><br>
-            <div><%= item.category_id %></div><br>
-            <div>値段: <%= item.without_tax %></div>
-          </div>
+    <% @items.each do |item| %>
+      <div class="col-6 mt-3">
+        <div class="card">
+          <%= link_to store_item_path(@store.id, item.id), class: "text-dark" do %>
+            <div class="card-img-top"><%= image_tag item.get_image(200,200), style: "width: 100%" %></div><br>
+            <h5 class="card-title long-name"><%= item.name %></h5>
+            <table class="table table-borderless">
+              <tr>
+                <th>販売価格</th>
+                <td><%= item.with_tax_price.to_s(:delimited) %> 円</td>
+              </tr>
+            </table>
         <% end %>
-      <% end %>
-    </div>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
