--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -28,7 +28,7 @@
           </tr>
           <tr>
             <th></th>
-            <td><%= f.submit "登録する", class: "btn btn-success", style: "width: 30%" %></td>
+            <td><%= f.submit "変更内容を保存", class: "btn btn-success", style: "width: 30%" %></td>
           </tr>
         </table>
       <% end %>
