--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,21 +1,27 @@
 <div class="container">
-  <div class="row mt-5 ml-5">
-    <h3><%= @item.name %></h3>
-  </div>
-  <div class="row mb-5">
-    <div class="col-6">
-      <div><%= image_tag @item.get_image(250,250) %></div>
+  <div class="card p-2">
+    <div class="row">
+      <div class="col-6">
+        <h3><%= @item.name %></h3>
+      </div>
     </div>
-    <div class="col-6">
-      <div><%= @item.explanation %></div><br>
-      <div><%= @item.without_tax %></div>
+    <div class="row">
+      <div class="col-6">
+        <div><%= image_tag @item.get_image(250,250) %></div>
+      </div>
+      <div class="col-6">
+        <h4>¥ <%= @item.with_tax_price.to_s(:delimited) %></h4>
+        <p class="explanation-text"><%= @item.explanation %></p>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
-      <%= f.hidden_field :item_id, value: @item.id %>
-      <%= f.select :amount, *[1..5] %>
-      <%= f.submit "カートにいれる", class: "btn btn-primary" %>
-    <% end %>
+  <div class="row mt-3" style="justify-content: center;">
+  <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
+    <%= f.hidden_field :item_id, value: @item.id %>
+    <%= f.select :amount, *[1..5], { include_blank: "個数" }, class: "form-control" %>
+  </div>
+  <div class="row mt-3" style="justify-content: center;">
+    <%= f.submit "カートにいれる", class: "btn btn-primary" %>
+  <% end %>
   </div>
 </div>
