--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,36 +1,46 @@
 <div class="container">
-  <div class="row mt-5 ml-5 mb-5">
+  <div class="row mt-5">
     <h3>カート</h3>
   </div>
-  <% @cart_items.each do |cart_item| %>
-  <div class="row mt-3">
-    <div class="col-3">
-      <%= image_tag cart_item.item.get_image(150, 150) %>
-    </div>
-    <div class="col-3 text-center">
-      <%= cart_item.item.name %><br>
-      <%= cart_item.item.with_tax_price %> 円
-    </div>
-    <div class="col-6">
-      <%= form_with model: @cart_item, url: cart_item_path(cart_item.id), method: :patch do |f| %>
-        数量 <%= f.select :amount, *[1..5],{selected: cart_item.amount} %>
-        <span class="ml-2"><%= f.submit "変更", class: "btn btn-primary" %></span>
-      <% end %>
-    </div>
+  <div class="row">
+    <% @cart_items.each do |cart_item| %>
+      <div class="card mt-3">
+        <div class="col-12">
+          <div class="row">
+              <div class="card-img-top">
+                <%= image_tag cart_item.item.get_image(500,350), style: "width: 100%" %>
+              </div>
+              <div class="col-6">
+                <div class="row">
+                  <h5 class="card-title long-name"><%= cart_item.item.name %></h5>
+                </div>
+                <div class="row ml-3">
+                  <p>単価 <%= cart_item.item.with_tax_price.to_s(:delimited) %> 円</p>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="row mt-2">
+                  <%= form_with model: @cart_item, url: cart_item_path(cart_item.id), method: :patch do |f| %>
+                    <span>数量 <%= f.select :amount, *[1..5], {selected: cart_item.amount} %></span>
+                    <span><%= f.submit "変更", class: "btn btn-primary btn-sm" %></span>
+                  <% end %>
+                </div>
+                <div class="row mt-3">
+                  <p>小計 <%= cart_item.subtotal.to_s(:delimited) %> 円</p>
+                </div>
+              </div>
+              <div class="col-2 mt-5">
+                <p><%= link_to "削除", cart_item_path(cart_item.item_id), method: :delete, class: "btn btn-danger btn-sm" %></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% @product_total += cart_item.subtotal %>
+    <% end %>
   </div>
-  <div class="row mt-3">
-    <div class="col-3 offset-3">
-      <span>小計 <%= cart_item.subtotal %> 円</span>
-    </div>
-    <div class="col-5 text-center">
-      <%= link_to "削除", cart_item_path(cart_item.item_id), method: :delete, class: "btn btn-danger" %>
-    </div>
-  </div>
-  <% @product_total += cart_item.subtotal %>
-  <% end %>
   <div class="row mt-5">
-    <strong class="mx-auto">合計金額 <span class="ml-3"><%= @product_total %> 円</span></strong>
-
+    <strong class="mx-auto">合計金額 <span class="ml-3"><%= @product_total.to_s(:delimited) %> 円</span></strong>
   </div>
   <div class="row mt-5 mx-auto">
     <%= link_to "購入手続き", new_order_path, class: "btn btn-primary mx-auto", style: "width: 40%;" %>
