--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -5,22 +5,34 @@
   <div class="row mt-3 ml-3">
     <h4>購入商品</h4>
   </div>
-  <div class="row mt-3">
+  <div class="row">
     <% @cart_items.each do |cart_item| %>
-    <div class="col-4 mt-3">
-      <%= image_tag cart_item.item.get_image(150, 150) %>
-    </div>
-    <div class="col-7 offset-1 ml-4 mt-3">
-      <div>
-        <span><%= cart_item.item.name %></span>
-        <span class="ml-3">数量 <strong><%= cart_item.amount %></strong></span><br>
+      <div class="card mt-3">
+        <div class="col-12">
+          <div class="row">
+            <div class="card-img-top">
+              <%= image_tag cart_item.item.get_image(500,350), style: "width: 100%;" %>
+            </div>
+            <div class="col-6">
+              <div class="row">
+                <h5 class="card-title long-name"><%= cart_item.item.name %></h5>
+              </div>
+              <div class="row ml-3">
+                <p>単価 <%= cart_item.item.with_tax_price.to_s(:delimited) %> 円</p>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="row">
+                <p>数量: <%= cart_item.amount %></p>
+              </div>
+              <div class="row">
+                <p>小計 <%= cart_item.subtotal.to_s(:delimited) %> 円</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="mt-5">
-        <span>単価 <%= cart_item.item.with_tax_price %> 円</span>
-        <span class="ml-3">小計 <strong><%= cart_item.subtotal %> 円</strong></span>
-      </div>
-    </div>
-    <% @product_total = @product_total + cart_item.subtotal %>
+      <% @product_total = @product_total + cart_item.subtotal %>
     <% end %>
   </div>
   <div class="row mt-3 ml-3">
@@ -33,10 +45,10 @@
     <h4>座席情報</h4>
   </div>
   <div class="row mx-auto">
-    <table class="table table-borderless">
+    <table class="table table-borderless" style="margin-left: 15%;">
       <tr>
-        <th width="50%" >座席エリア</th>
-        <td width="50%"><%= @order.seat_area %></td>
+        <th width="40%">座席エリア</th>
+        <td width="60%"><%= @order.seat_area %></td>
       </tr>
       <tr>
         <th>座席アルファベット</th>
@@ -48,36 +60,27 @@
       </tr>
     </table>
   </div>
-  <div class="row">
-    <div class="col-4">
-      <p>送料</p>
-    </div>
-    <div class="col-8">
-      <strong>200 円</strong>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4">
-      <p>商品合計</p>
-    </div>
-    <div class="col-8">
-      <strong><%= @product_total %> 円</strong>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-4">
-      <p>請求金額</p>
-    </div>
-    <div class="col-8">
-      <strong><%= @total_price = @product_total + 200 %> 円</strong>
-    </div>
-  </div>
+  <table class="table table-borderless" style="margin-left: 30%;">
+    <tr>
+      <th width="20%">送料</th>
+      <td width="80%">200 円</td>
+    </tr>
+    <tr>
+      <th>商品合計</th>
+      <td><%= @product_total.to_s(:delimited) %> 円</td>
+    </tr>
+    <% @total_price = @product_total + 200 %>
+    <tr>
+      <th>請求金額</th>
+      <td><strong><%= @total_price.to_s(:delimited) %> 円</strong></td>
+    </tr>
+  </table>
   <%= form_with model: @order, url: orders_path do |f| %>
     <%= f.hidden_field :seat_area, value: @order.seat_area %>
     <%= f.hidden_field :seat_alphabet, value: @order.seat_alphabet %>
     <%= f.hidden_field :seat_number, value: @order.seat_number %>
     <%= f.hidden_field :total_price, value: @total_price %>
-    <div class="text-center mt-">
+    <div class="text-center">
       <%= f.submit "注文を確定する", class: "btn btn-primary text-center", style: "width: 30%;" %>
     </div>
   <% end %>
