--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,7 +8,7 @@
         <div class="col-12">
           <div class="row">
               <div class="card-img-top">
-                <%= image_tag cart_item.item.get_image(500,350), style: "width: 100%" %>
+                <%= image_tag cart_item.item.get_image(500,350), style: "width: 100%;" %>
               </div>
               <div class="col-6">
                 <div class="row">
