--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,9 +1,7 @@
 <div class="container">
   <div class="card p-2">
-    <div class="row">
-      <div class="col-6">
-        <h3><%= @item.name %></h3>
-      </div>
+    <div class="row ml-1">
+      <h3><%= @item.name %></h3>
     </div>
     <div class="row">
       <div class="col-6">
