[Fix]カート一覧画面　初回遷移時カートへ進むボタンが押せない

--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -13,13 +13,15 @@
       </div>
     </div>
   </div>
-  <div class="row mt-3" style="justify-content: center;">
   <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
-    <%= f.hidden_field :item_id, value: @item.id %>
-    <%= f.select :amount, *[1..5], { include_blank: "個数" }, class: "form-control" %>
+  <div class="row mt-3">
+    <div class="col-3 mx-auto">
+      <%= f.hidden_field :item_id, value: @item.id %>
+      <%= f.select :amount, *[1..5], { include_blank: "個数" }, class: "form-control" %>
+    </div>
   </div>
   <div class="row mt-3" style="justify-content: center;">
     <%= f.submit "カートにいれる", class: "btn btn-primary" %>
-  <% end %>
   </div>
+  <% end %>
 </div>
