[Update]カート機能 1度にまとめて購入できるのは1店舗の商品のみ

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,6 +23,9 @@
             <li class="nav-item">
               <%= link_to "商品登録", new_admin_store_item_path(current_admin_store.id), class: 'nav-link' %>
             </li>
+            <li class="nav-item">
+              <%= link_to "注文履歴", admin_store_orders_path(current_admin_store.id), class: 'nav-link' %>
+            </li>
           <% end %>
         </ul>
       </div>
