--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -3,7 +3,7 @@
     <h2>注文履歴一覧</h2>
   </div>
   <div class="row">
-    <table class="table">
+    <table class="table table-hover">
       <thead>
         <th>購入日時</th>
         <th>注文番号</th>
@@ -15,7 +15,7 @@
         <td><%= order.created_at.strftime('%Y/%m/%d/%H:%M') %></td>
         <td><%= order.order_number %></td>
         <td><%= order.order_status %></td>
-        <td><%= link_to "Show", admin_order_path(order.id), class: "btn btn-info" %></td>
+        <td><%= link_to "Show", admin_order_path(current_admin_store.id, order.id), class: "btn btn-info" %></td>
       </tbody>
       <% end %>
     </table>
