--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -14,8 +14,8 @@
       <tbody>
         <td><%= order.created_at.strftime('%Y/%m/%d/%H:%M') %></td>
         <td><%= order.order_number %></td>
-        <td><%= order.order_status %></td>
-        <td><%= link_to "Show", admin_order_path(current_admin_store.id, order.id), class: "btn btn-info" %></td>
+        <td><%= order.order_status_i18n %></td>
+        <td><%= link_to "Show", admin_order_path(order.id), class: "btn btn-info" %></td>
       </tbody>
       <% end %>
     </table>
