--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -26,7 +26,12 @@
       </tr>
       <tr>
         <th>注文ステータス</th>
-        <td><%= @order.order_status %></td>
+        <td>
+          <%= form_with model: @order, url: admin_order_path(@order.id), method: :patch do |f| %>
+            <%= f.collection_select :order_status, Order.order_statuses_i18n, :first, :last %>
+            <%= f.submit "更新", class: "btn btn-success btn-sm" %>
+          <% end %>
+          </td>
       </tr>
     </table>
   </div>
