--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -27,7 +27,7 @@
       <tr>
         <th>注文ステータス</th>
         <td>
-          <%= form_with model: @order, url: admin_order_path(@order.id), method: :patch do |f| %>
+          <%= form_with model: [@store, @order], url: admin_store_order_path(@order.id), method: :patch do |f| %>
             <%= f.collection_select :order_status, Order.order_statuses_i18n, :first, :last %>
             <%= f.submit "更新", class: "btn btn-success btn-sm" %>
           <% end %>
