--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
               <%= link_to "商品登録", new_admin_store_item_path(current_admin_store.id), class: 'nav-link' %>
             </li>
             <li class="nav-item">
-              <%= link_to "注文履歴", admin_orders_path, class: 'nav-link' %>
+              <%= link_to "注文履歴", admin_store_orders_path(current_admin_store.id), class: 'nav-link' %>
             </li>
           <% end %>
         </ul>
