--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -18,7 +18,13 @@
         </tr>
         <tr>
           <th>販売ステータス</th>
-          <td><%= @item.is_active %></td>
+          <td>
+            <% if @item.is_active == true %>
+              <span class="text-success font-weight-bold">販売中</span>
+            <% else %>
+              <span class="text-secondary font-weight-bold">販売停止中</span>
+            <% end %>
+          </td>
         </tr>
         <tr>
           <th>在庫数</th>
