[Update]検索ボタン文字上下中央揃え

--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -43,7 +43,7 @@
             <% if item.is_active == true %>
               <span class="text-success font-weight-bold">販売中</span>
             <% else %>
-              <span class="text-secondary font-weight-bold">販売停止中</span>
+              <span class="text-secondary font-weight-bold">売り切れ</span>
             <% end %>
           </td>
           <td><%= item.stock %></td>
