--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <% @categories.each do |category| %>
     <div class="col-6 mt-5" style="height: 100px; text-align: center;">
-      <%= link_to category.name, category_path(category.id), class: "btn btn-primary w-75 h-100" %>
+      <%= link_to category.name, category_path(category.id), class: "btn btn-primary w-75", style: "line-height: 100px;" %>
     </div>
     <% end %>
   </div>
