--- a/app/views/public/sale_areas/index.html.erb
+++ b/app/views/public/sale_areas/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <% @sale_areas.each do |sale_area| %>
     <div class="col-6 mt-5" style="height: 100px; text-align: center;">
-      <%= link_to sale_area.name, sale_area_path(sale_area.id), class: "btn btn-primary w-75 h-100" %>
+      <%= link_to sale_area.name, sale_area_path(sale_area.id), class: "btn btn-primary w-75", style: "line-height: 100px;" %>
     </div>
     <% end %>
   </div>
