[Update]顧客新着グルメ画面 レイアウト

--- a/app/views/public/new_gourmets/index.html.erb
+++ b/app/views/public/new_gourmets/index.html.erb
@@ -4,14 +4,23 @@
   </div>
   <div class="row">
     <% @items.each do |item| %>
-    <div class="col-6">
-      <%= link_to store_item_path(item.store_id, item.id) do %>
-        <%= image_tag item.get_image(200,150) %>
-        <p><%= item.name %></p>
-        <p><%= item.store.name %></p>
-        <p><%= item.store.sale_area.name %></p>
-        <p><%= item.with_tax_price.to_s(:delimited) %>円</p>
-      <% end %>
+    <div class="col-6 mt-3">
+      <div class="card">
+        <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
+          <div class="card-img-top"><%= image_tag item.get_image(200,200), style: "width: 100%;" %></div>
+          <h5 class="card-title long-name"><%= item.name %></h5>
+          <table class="table table-borderless table-sm" style="table-layout: fixed;">
+            <tr>
+              <th width="35%">店舗名</th>
+              <td class="long-name" width="65%"><%= item.store.name %></td>
+            </tr>
+            <tr>
+              <th>販売価格</th>
+              <td><%= item.with_tax_price.to_s(:delimited) %> 円</td>
+            </tr>
+          </table>
+        <% end %>
+      </div>
     </div>
     <% end %>
   </div>
