--- a/app/views/public/rankings/index.html.erb
+++ b/app/views/public/rankings/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Public::Rankings#index</h1>
-<p>Find me in app/views/public/rankings/index.html.erb</p>
+<div class="container">
+  <div class="row mt-5 mb-5">
+    <h4 class="mx-auto">人気グルメランキング</h4>
+  </div>
+  <% @items.each do |item| %>
+    <div class="card p-2 mt-5">
+      <%= link_to store_item_path(item.store_id, item.id), class: "text-dark" do %>
+        <div class="row ml-5">
+          <h3><%= item.name %></h3>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <div><%= image_tag item.get_image(250,250) %></div>
+          </div>
+          <div class="col-6">
+            <h4>¥ <%= item.with_tax_price.to_s(:delimited) %></h4>
+            <p class="explanation-text"><%= item.explanation %></p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
+</div>
