[Fix]管理者閲覧権限付与

--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -24,7 +24,7 @@
           </tr>
           <tr>
             <th>値段</th>
-            <td><%= f.text_field :without_tax %></td>
+            <td><%= f.text_field :without_tax %> 円</td>
           </tr>
           <tr>
             <th></th>
