--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <% if @store.owner_flag == false %>
   <div class="row mt-5 mb-1">
     <h2 class="mr-5"><%= @store.name %></h2>
   </div>
@@ -10,11 +11,7 @@
       <table class="table table-borderless mt-5">
         <tr>
           <th>販売エリア</th>
-          <td>
-            <% if @store.owner_flag == false %>
-              <%= @store.sale_area.name %>
-            <% end %>
-          </td>
+          <td><%= @store.sale_area.name %></td>
         </tr>
         <tr>
           <th>販売商品数</th>
@@ -24,7 +21,7 @@
           <th></th>
           <td>
             <% if current_admin_store.owner_flag == true %>
-              <%= link_to "注文履歴", admin_store_orders_path(@store.id), class: "btn btn-primary" %>
+              <%= link_to "注文履歴", admin_store_orders_path(@store.id), class: "btn btn-warning" %>
             <% end %>
           </td>
         </tr>
@@ -64,4 +61,7 @@
       <% end %>
     </table>
   </div>
+  <% else %>
+  <h1>管理人</h1>
+  <% end %>
 </div>
