[Fix]ヘッダーが常に最前に来るように修正

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,7 @@
-<div class="home">
-  <h1>フォント</h1>
+<div class="container home">
+  <div class="row">
+    <div class="home-letter">
+      <h2>ログイン不要！</h2>
+    </div>
+  </div>
 </div>
