--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,11 +2,20 @@
 
 .home {
   background-image: url("/assets/ykyujo.jpg");
-  height: 800px;
+  background-position: center;
   background-size: cover;
+  width: 100%;
+  height: 800px;
+  position: relative;
+}
+.home-letter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 header {
+  z-index: 9999;
   width: 100%;
   position: fixed; /* ウィンドウを基準に画面に固定 */
   top: 0; /* 上下の固定位置を上から0pxにする */
@@ -14,8 +23,7 @@ header {
 }
 
 body {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  height: 100%;
   font-family: "You Gothic Medium", "游ゴシック Medium", "YuGothic", "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-seril;
 }
 
