[Fix]顧客側レイアウト微調整

--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -44,4 +44,7 @@
   <div class="row mt-5 mx-auto">
     <%= link_to "購入手続き", new_order_path, class: "btn btn-primary mx-auto", style: "width: 40%;" %>
   </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
+  </div>
 </div>
