--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -84,4 +84,7 @@
       <%= f.submit "注文を確定する", class: "btn btn-primary text-center", style: "width: 30%;" %>
     </div>
   <% end %>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
+  </div>
 </div>
