--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -8,10 +8,10 @@
   height: 800px;
   position: relative;
 }
+
 .home-letter {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  top: 30%;
 }
 
 header {
@@ -20,6 +20,11 @@ header {
   position: fixed; /* ウィンドウを基準に画面に固定 */
   top: 0; /* 上下の固定位置を上から0pxにする */
   left: 0; /* 左右の固定位置を左から0pxにする */
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
 }
 
 body {
@@ -39,4 +44,8 @@ body {
 
 .explanation-text {
   font-size: 13px;
+}
+
+h3 {
+  margin-top: 50px;
 }
