--- a/app/views/public/categories/index.html.erb
+++ b/app/views/public/categories/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row">
+  <div class="row" style="margin-top: 70px;">
     <% @categories.each do |category| %>
     <div class="col-6 mt-5" style="height: 100px; text-align: center;">
       <%= link_to category.name, category_path(category.id), class: "btn btn-primary w-75", style: "line-height: 100px;" %>
