--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,6 +1,6 @@
-<div class="container home">
+<div class="container-fluid home">
   <div class="row">
-    <div class="home-letter">
+    <div class="home-letter mx-auto">
       <h2>ログイン不要！</h2>
     </div>
   </div>
