--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" style="margin-top: 100px;">
   <div class="card p-2">
     <div class="row ml-1">
-      <h3><%= @item.name %></h3>
+      <h4><%= @item.name %></h4>
     </div>
     <div class="row">
       <div class="col-6">
