--- a/app/views/public/new_gourmets/index.html.erb
+++ b/app/views/public/new_gourmets/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row mt-5 mb-5">
+  <div class="row mt-5 mb-3">
     <h3 class="mx-auto">新着グルメ</h3>
   </div>
   <div class="row">
@@ -23,5 +23,8 @@
       </div>
     </div>
     <% end %>
+  </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
 </div>
