--- a/app/views/public/stores/index.html.erb
+++ b/app/views/public/stores/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row mt-5">
+  <div class="row mt-5 mb-3">
     <h3>店舗一覧</h3>
   </div>
   <div class="row">
@@ -8,8 +8,8 @@
       <div class="card">
         <%= link_to store_path(store.id), class: "text-dark" do %>
           <div class="card-img-top"><%= image_tag store.get_image(200,200), style: "width: 100%;" %></div><br>
-          <h5 class="card-title"><%= store.name %></h5>
-          <table class="table table-borderless">
+          <h5 class="card-title long-name"><%= store.name %></h5>
+          <table class="table table-borderless text-center" style="line-height: 30%">
             <tr>
               <th>販売エリア</th>
               <td><%= store.sale_area.name %></td>
@@ -23,5 +23,8 @@
       </div>
     </div>
     <% end %>
+  </div>
+  <div class="row">
+    <h5 style="margin-bottom: 100px;"></h5>
   </div>
 </div>
