--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,22 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
-
-.home {
-  background-image: url("/assets/ykyujo.jpg");
-  background-position: center;
-  background-size: cover;
-  width: 100%;
-  height: 800px;
-  position: relative;
-}
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
 .home-letter {
   position: absolute;
   top: 30%;
+  margin: 0 auto;
 }
 
 header {
   z-index: 9999;
-  width: 100%;
+  width: 100vw;
   position: fixed; /* ウィンドウを基準に画面に固定 */
   top: 0; /* 上下の固定位置を上から0pxにする */
   left: 0; /* 左右の固定位置を左から0pxにする */
@@ -28,7 +21,12 @@ footer {
 }
 
 body {
-  height: 100%;
+  background-image: url("/assets/ykyujo.png");
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
   font-family: "You Gothic Medium", "游ゴシック Medium", "YuGothic", "游ゴシック体", "ヒラギノ角ゴ Pro W3", sans-seril;
 }
 
@@ -42,14 +40,19 @@ body {
   background-color: gold;
 }
 
-.explanation-text {
-  font-size: 13px;
-}
-
 h2 {
   margin-top: 50px;
 }
 
 h3 {
   margin-top: 50px;
+}
+
+/* タブレット用CSSをメディアクエリ内に記述する */
+@media screen and (min-width: 521px) {
+
+}
+/* PC用CSSをメディアクエリ内に記述する */
+@media screen and (min-width: 960px) {
+
 }
