--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,22 +1,22 @@
 <div class="container" style="margin-top: 100px;">
   <div class="card p-2">
-    <div class="row ml-1">
-      <h4><%= @item.name %></h4>
-    </div>
     <div class="row">
-      <div class="col-6">
-        <div><%= image_tag @item.get_image(250,250) %></div>
+      <div class="col-12">
+        <div class="card-img-top"><%= image_tag @item.image, style: "width: 100%;" %></div>
       </div>
-      <div class="col-6">
-        <h4>¥ <%= @item.with_tax_price.to_s(:delimited) %></h4>
+      <div class="col-12 mt-1">
+        <h4><strong><%= @item.name %></strong></h4>
+        <h4><strong>¥ <%= @item.with_tax_price.to_s(:delimited) %></strong></h4>
         <p class="explanation-text"><%= @item.explanation %></p>
+        <i class="fas fa-store-alt"></i> <span><%= @item.store.name%></span>
+
       </div>
     </div>
   </div>
   <% if customer_signed_in? %>
     <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
     <div class="row mt-3">
-      <div class="col-3 mx-auto">
+      <div class="col-4 mx-auto">
         <%= f.hidden_field :item_id, value: @item.id %>
         <%= f.hidden_field :customer_id, value: current_customer.id %>
         <%= f.select :amount, *[1..5], { include_blank: "個数" }, class: "form-control" %>
